--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -10,19 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    - name: Pack NuGet Package
+      run: dotnet pack --no-build --configuration Release --output nupkgs .\RustPlusAPI\RustPlusAPI\RustPlusAPI.csproj
+
+    - name: Publish NuGet Package
+      run: dotnet nuget push .\RustPlusApi\RustPlusApi\bin\Release\*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
