--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
 
     - name: Pack NuGet Package
-      run: dotnet pack --configuration Release --output nupkgs ./RustPlusApi/RustPlusApi/RustPlusApi.csproj
+      run: cd ./RustPlusApi/RustPlusApi/ && dotnet pack --configuration Release
 
     - name: Publish NuGet Package
-      run: dotnet nuget push ./RustPlusApi/RustPlusApi/bin/Release/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push *.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
