--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,5 +31,10 @@ jobs:
     - name: Pack NuGet Package
       run: cd ./RustPlusApi/RustPlusApi/ && dotnet pack --configuration Release
 
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        path: ./**/*.nupkg
+
     - name: Publish NuGet Package
-      run: cd ./RustPlusApi/RustPlusApi/bin/Release/ && dotnet nuget push *.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
