--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,12 +1,20 @@
-name: .NET
+name: Continuous Deployment
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["CI.yml Continuous Integration"]
+    types:
+      - completed
 
 jobs:
+  check_branch:
+    runs-on: ubuntu-latest
+    outputs:
+      is_main: ${{ steps.check.outputs.is_main }}
+    steps:
+      - id: check
+        run: echo "::set-output name=is_main::${{ github.event.workflow_run.head_branch == 'main' }}"
+        
   build-and-deploy:
     runs-on: ubuntu-latest
 
@@ -19,15 +27,6 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --no-restore
-
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-
     - name: Pack NuGet Package
       run: cd ./RustPlusApi/RustPlusApi/ && dotnet pack --configuration Release
 
@@ -35,6 +34,9 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         path: ./**/*.nupkg
+
+    - name: Publish NuGet Package to GitHub Packages
+      run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}} --source https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
 
     - name: Publish NuGet Package
       run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
