--- a/RustPlusApi/RustPlusApi/RustPlusApi.csproj
+++ b/RustPlusApi/RustPlusApi/RustPlusApi.csproj
@@ -20,15 +20,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.26.0" />
-		<PackageReference Include="protobuf-net.BuildTools" Version="3.2.33">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
+		<PackageReference Include="Google.Protobuf" Version="3.26.1" />
+		<PackageReference Include="protobuf-net" Version="3.2.30" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
