--- a/RustPlusApi/RustPlusApi/RustPlusApi.csproj
+++ b/RustPlusApi/RustPlusApi/RustPlusApi.csproj
@@ -5,10 +5,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PackageId>RustPlusApi</PackageId>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<Authors>HandyS11</Authors>
 		<Owners>HandyS11</Owners>
-		<Product>A Rust+ API client made in C#.</Product>
+		<Product>A Rust+ API made in C#.</Product>
 		<Description>RustPlusApi is a C# library for interacting with the Rust+ API.</Description>
 		<PackageTags>rust rustplus rustplusapi</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
