--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,8 +25,11 @@ jobs:
       with:
         path: ./**/*.nupkg
 
+    - name: Add GitHub Packages as NuGet source
+      run: dotnet nuget add source https://nuget.pkg.github.com/${{github.repository_owner}}/index.json --name github --username ${{github.actor}} --password ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
+      
     - name: Publish NuGet Package to GitHub Packages
-      run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}} --source https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
+      run: dotnet nuget push ./**/*.nupkg --source github
 
     - name: Publish NuGet Package
       run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
