--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet nuget add source https://nuget.pkg.github.com/${{github.repository_owner}}/index.json --name github --username ${{github.actor}} --password ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
       
     - name: Publish NuGet Package to GitHub Packages
-      run: dotnet nuget push ./**/*.nupkg --source github
+      run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}} --source github
 
     - name: Publish NuGet Package
       run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
