Remove Github package

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -2,7 +2,8 @@ name: Continuous Deployment
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - release*
 
 jobs:  
   build-and-deploy:
@@ -24,12 +25,6 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         path: ./**/*.nupkg
-
-    - name: Add GitHub Packages as NuGet source
-      run: dotnet nuget add source https://nuget.pkg.github.com/${{github.repository_owner}}/index.json --name github --username ${{github.actor}} --password ${{secrets.GITHUB_TOKEN}} --store-password-in-clear-text
-      
-    - name: Publish NuGet Package to GitHub Packages
-      run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}} --source github
 
     - name: Publish NuGet Package
       run: dotnet nuget push ./**/*.nupkg --api-key ${{secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
