Set up readme and so

--- a/RustPlusApi/RustPlusApi.Fcm/RustPlusApi.Fcm.csproj
+++ b/RustPlusApi/RustPlusApi.Fcm/RustPlusApi.Fcm.csproj
@@ -4,12 +4,29 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PackageId>RustPlusApi.Fcm</PackageId>
+		<Version>1.0.2</Version>
+		<Authors>HandyS11</Authors>
+		<Owners>HandyS11</Owners>
+		<Product>A Rust+ API websocket made in C#.</Product>
+		<Description>This is a C# client for the Rust+ websocket. It allows you to receive notification via FCM.</Description>
+		<PackageTags>rust rustplus rustplusapi</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<LicenseUrl>https://github.com/HandyS11/RustPlusApi/blob/main/LICENSE</LicenseUrl>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<RepositoryUrl>https://github.com/HandyS11/RustPlusApi</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="protobuf-net" Version="3.2.30" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
