--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
-    - name: Pack NuGet Package
+    - name: Pack NuGet Package 1
       run: cd ./RustPlusApi/RustPlusApi/ && dotnet pack --configuration Release
+
+    - name: Pack NuGet Package 2
+      run: cd ./RustPlusApi/RustPlusApi.Fcm/ && dotnet pack --configuration Release
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
