--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,11 +6,15 @@ on:
       - "develop"
       - "feature/*"
       - "fix/*"
+      - "refacto/*"
+      - "refactor/*"
   pull_request:
     branches:
       - "develop"
       - "feature/*"
       - "fix/*"
+      - "refacto/*"
+      - "refactor/*"
 
 jobs:
   build-and-deploy:
