--- a/src/RustPlusApi/RustPlusApi.csproj
+++ b/src/RustPlusApi/RustPlusApi.csproj
@@ -2,11 +2,11 @@
 
     <PropertyGroup>
         <PackageId>RustPlusApi</PackageId>
-        <Version>1.3.0</Version>
+        <Version>1.4.0</Version>
         <Authors>HandyS11</Authors>
         <Owners>HandyS11</Owners>
-        <Product>A Rust+ API made in C#.</Product>
-        <Description>RustPlusApi is a C# library for interacting with the Rust+ API.</Description>
+        <Product>A Rust+ API</Product>
+        <Description>A library for interacting with the Rust+ API.</Description>
         <PackageTags>rust rustplus rustplusapi</PackageTags>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <LicenseUrl>https://github.com/HandyS11/RustPlusApi/blob/main/LICENSE</LicenseUrl>
