Add exclusions for sample files in SonarQube analysis

--- a/.github/workflows/Sonar.yml
+++ b/.github/workflows/Sonar.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Build and analyze
         shell: powershell
         run: |
-          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"HandyS11_RustPlusApi_b3884aa0-fda3-428b-885e-bcf2ff84285c" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
+          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"HandyS11_RustPlusApi_b3884aa0-fda3-428b-885e-bcf2ff84285c" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}" /d:sonar.exclusions="**/samples/**"
           dotnet build
           ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
